security analysis fixes